objects/TW1_Operador__c.object
<CustomObject>

    <fields>
        <fullName>TW1_Email__c</fullName>
        <externalId>true</externalId>
        <label>E-mail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Empresa__c</fullName>
        <label>Empresa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_do_Usuario__c</fullName>
        <label>Nome do Usuário</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_SGL__c</fullName>
        <label>SGL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Senha__c</fullName>
        <externalId>true</externalId>
        <label>Senha</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Operadores</relationshipLabel>
        <relationshipName>Operadores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Operador</fullName>
                </value>
                <value>
                    <fullName>Coordenador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Operador</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Tipo__c</columns>
        <columns>TW1_Email__c</columns>
        <columns>TW1_Senha__c</columns>
        <columns>TW1_Shopping__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <label>Nome do Operador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operadores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>